--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "start": "wrangler dev"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20230419.0",
-    "itty-router": "^4.0.9",
-    "typescript": "^5.0.4",
-    "wrangler": "^3.0.0",
-		"prettier": "^2.8.8"
+    "@cloudflare/workers-types": "^4.20230814.0",
+    "itty-router": "^4.0.17",
+    "prettier": "^3.0.2",
+    "typescript": "^5.1.6",
+    "wrangler": "^3.5.1"
   }
 }
